--- a/static/form.html
+++ b/static/form.html
@@ -14,6 +14,12 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
         <br>
+        <label for="message">Message:</label>
+        <input type="text" id="message" name="message" required>
+        <br>
+        <label for="email2">Email recipient:</label>
+        <input type="email" id="email2" name="email2" required>
+        <br>
         <label for="cons">Consent to Terms and Conditions:</label>
         <input type="checkbox" id="cons" name="cons" required>
         <br>
