--- a/static/form.html
+++ b/static/form.html
@@ -17,6 +17,9 @@
         <label for="message">Message:</label>
         <input type="text" id="message" name="message" required>
         <br>
+        <label for="message_number">Message number:</label>
+        <input type="number" id="message_number" name="message_number" required>
+        <br>
         <label for="email2">Email recipient:</label>
         <input type="email" id="email2" name="email2" required>
         <br>
