--- a/static/form.html
+++ b/static/form.html
@@ -26,7 +26,12 @@
         <label for="cons">Consent to Terms and Conditions:</label>
         <input type="checkbox" id="cons" name="cons" required>
         <br>
-        <button type="submit">Submit</button>
+      <div class="waitlistForm">
+        <button type="submit" class="brandBtn">
+          Send
+          <i class="fa-solid fa-circle-arrow-right"></i>
+        </button>
+      </div>
     </form>
 
 </body>
